Update README and manifest for Aroma-Link integration
Expanded the README with detailed installation, configuration, usage, troubleshooting, and technical sections. Updated manifest.json to use the correct documentation URL and code owner.

--- a/custom_components/aromalink/manifest.json
+++ b/custom_components/aromalink/manifest.json
@@ -2,9 +2,9 @@
     "domain": "aromalink",
     "name": "Aroma-Link Diffuser",
     "version": "0.1.0",
-    "documentation": "https://github.com/yourusername/aromalink-homeassistant",
+    "documentation": "https://github.com/vault-tec-io/homeassistant-aroma-link",
     "dependencies": [],
-    "codeowners": ["@yourgithubusername"],
+    "codeowners": ["@vault-tec-io"],
     "requirements": [
         "websockets>=10.0",
         "aiohttp>=3.8.0"
